Finalização Modelo Web

--- a/index.html
+++ b/index.html
@@ -24,7 +24,23 @@
                 </div>        
             </div>
             <div class="info__card">
-                
+                <div class="card">
+                    <div class="card__title">
+                <p>Platinum Card</p>
+                    </div>
+                    <div class="card__chip">
+                <img src="/IMG/chip.png" alt="">
+                    </div>
+                    <div class="card__footer">
+                        <div class="card__footer-info">
+                <p class="footer-text footer-text--big">6689 2547 2265 1258</p>
+                <p class="footer-text">Lanne Melo</p>
+                        </div>
+                         <div class="card__footer-date">
+                    <p class="footer-text">02/49</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
